--- a/pi/server-index.html
+++ b/pi/server-index.html
@@ -2,18 +2,66 @@
   <style>
     body {
       font-family: Verdana;
+      font-size: 16px;
+      padding: 1em;
+    }
+    button,
+    [role="button"] {
+      display: inline-block;
+      color: black;
+      text-decoration: none;
+      padding: 1em;
+      margin-bottom: 1;
+      background: #abffba;
+      box-shadow: inset 4px 3px 0px rgba(255, 255, 255, 0.6),
+        inset -4px -3px 0px rgba(0, 0, 0, 0.2);
+      /* border: 1px solid #abffba; */
+      transition: all 0.15s ease-out;
+      cursor: pointer;
+      border: 0;
+    }
+    button:hover,
+    [role="button"]:hover {
+      /* border-color: #abffba; */
+      background-color: #70c27f;
+      /* box-shadow: inset 4px 3px 0px rgb(98, 173, 112); */
+      box-shadow: inset 4px 3px 0px rgba(0, 0, 0, 0.2),
+        inset -4px -3px 0px rgba(255, 255, 255, 0.6);
+    }
+    input,
+    textarea {
+      font-family: inherit;
+      font-size: inherit;
+    }
+    [type="submit"] {
+    }
+    label {
+      display: block;
+      margin: 0 0 0.5em;
+    }
+    textarea {
+      min-width: 50%;
+      height: 3em;
     }
   </style>
   <body>
     <h1>Spotify Remote</h1>
     <a
+      id="auth"
       role="button"
       href="https://accounts.spotify.com/authorize?client_id=3f8c992f08c04ffd975d95665dad1318&response_type=code&redirect_uri=https://querystrings.netlify.com&scope=user-read-playback-state%20user-modify-playback-state"
       target="_blank"
-      >Authorise Spotify</a
+      onClick="setTimeout(function() {
+         document.getElementById('form').removeAttribute('style');
+         document.getElementById('auth').setAttribute('style','display:none');
+      }, 500);"
+      >Authorise Spotify (copy 'code' and come back!)</a
     >
-    <form type="GET" action="">
-      <input name="authToken"></input>
+    <form id="form" type="GET" action="" style="opacity:.3">
+      <p>
+        <label>Paste Code:</label>
+        <textarea name="authToken"></textarea>
+      </p>
       <button type="submit">Submit</button>
     </form>
   </body>
