--- a/pi/server-index.html
+++ b/pi/server-index.html
@@ -19,6 +19,7 @@
       transition: all 0.15s ease-out;
       cursor: pointer;
       border: 0;
+      user-select: none;
     }
     button:hover,
     [role="button"]:hover {
@@ -46,23 +47,41 @@
   </style>
   <body>
     <h1>Spotify Remote</h1>
-    <a
-      id="auth"
-      role="button"
-      href="https://accounts.spotify.com/authorize?client_id=3f8c992f08c04ffd975d95665dad1318&response_type=code&redirect_uri=https://querystrings.netlify.com&scope=user-read-playback-state%20user-modify-playback-state"
-      target="_blank"
-      onClick="setTimeout(function() {
-         document.getElementById('form').removeAttribute('style');
-         document.getElementById('auth').setAttribute('style','display:none');
-      }, 500);"
-      >Authorise Spotify (copy 'code' and come back!)</a
-    >
-    <form id="form" type="GET" action="" style="opacity:.3">
-      <p>
-        <label>Paste Code:</label>
-        <textarea name="authToken"></textarea>
-      </p>
-      <button type="submit">Submit</button>
-    </form>
+    <div id="auth-stuff">
+      <a
+        id="auth"
+        role="button"
+        href="https://accounts.spotify.com/authorize?client_id=3f8c992f08c04ffd975d95665dad1318&response_type=code&redirect_uri=https://querystrings.netlify.com&scope=user-read-playback-state%20user-modify-playback-state"
+        target="_blank"
+        onClick="toggleForm()"
+        >Authorise Spotify (copy 'code' and come back!)</a
+      >
+      <form id="form" type="GET" action="" style="opacity:.3">
+        <p>
+          <label>Paste Code:</label>
+          <textarea name="authToken" required></textarea>
+        </p>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+
+    <p id="thanks" style="display:none">Thanks!</p>
+
+    <script>
+      if (window.location.search.includes("authToken")) {
+        document
+          .getElementById("auth-stuff")
+          .setAttribute("style", "display:none");
+        document
+          .getElementById("thanks")
+          .setAttribute("style", "display:block");
+      }
+      function toggleForm() {
+        setTimeout(function() {
+          document.getElementById("form").removeAttribute("style");
+          document.getElementById("auth").setAttribute("style", "display:none");
+        }, 500);
+      }
+    </script>
   </body>
 </html>
