--- a/pi/server.html
+++ b/pi/server.html
@@ -49,7 +49,7 @@
       <a
         id="auth"
         role="button"
-        href="{spotifyAuthUrl}"
+        href="{authoriseURL}"
         target="_blank"
         onClick="toggleForm()"
         >Authorise Spotify (copy 'code' and come back!)</a
